--- a/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
+++ b/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
@@ -43,7 +43,7 @@
          </font>
       </Label>
       <TextField fx:id="city" layoutX="363.0" layoutY="178.0" prefHeight="31.0" prefWidth="181.0" />
-      <DatePicker fx:id="birth" layoutX="363.0" layoutY="113.0" prefHeight="31.0" prefWidth="181.0" />
+      <DatePicker fx:id="birth" editable="false" layoutX="363.0" layoutY="113.0" prefHeight="31.0" prefWidth="181.0" />
       <Label layoutX="367.0" layoutY="90.0" text="Дата рождения">
          <font>
             <Font size="16.0" />
