--- a/src/main/resources/view/css/table.css
+++ b/src/main/resources/view/css/table.css
@@ -1,5 +1,7 @@
 .combo-box{
-    -fx-background-color: black;
+    -fx-background-color: white;
+    -fx-border-color: #D3D3D3;
+    -fx-border-width: 1 1 1 1;
 }
 .table-view {
     -fx-background-color: rgb(255, 255, 255);
