--- a/src/main/resources/view/RelayRunPage.fxml
+++ b/src/main/resources/view/RelayRunPage.fxml
@@ -40,7 +40,7 @@
             </Button>
             <Pane prefHeight="429.0" prefWidth="343.0" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                <children>
-                  <TableView layoutX="14.0" maxHeight="-Infinity" prefHeight="370.0" prefWidth="288.0" stylesheets="@css/table.css">
+                  <TableView fx:id="relayTeamTable" layoutX="14.0" maxHeight="-Infinity" prefHeight="370.0" prefWidth="288.0" stylesheets="@css/table.css">
                     <columns>
                       <TableColumn fx:id="relayTeamIdColumn" prefWidth="32.0" resizable="false" text="№" />
                       <TableColumn fx:id="relayTeamNameColumn" prefWidth="248.0" text="Название" />
@@ -92,7 +92,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="newCommand" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#NewCommand" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-add" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="newCommand" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#addRelayTeam" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-add" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -101,7 +101,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="editButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#EditCommand" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-edit" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1">
+                  <Button fx:id="editButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#editRelayTeam" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-edit" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1">
                      <graphic>
                         <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -110,7 +110,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-del" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2">
+                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#removeRelayTeam" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-del" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2">
                      <graphic>
                         <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -134,7 +134,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="newPeople" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#NewPeople" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-add" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="newPeople" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#newPeople" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-add" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -143,7 +143,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="editPeople" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#EditPeople" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-edit" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1">
+                  <Button fx:id="editPeople" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#editPeople" prefHeight="34.0" prefWidth="34.0" styleClass="little-button-edit" stylesheets="@css/table.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1">
                      <graphic>
                         <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
                            <image>
