--- a/src/main/resources/view/MarksMonitorCompetition.fxml
+++ b/src/main/resources/view/MarksMonitorCompetition.fxml
@@ -123,7 +123,7 @@
                <children>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="2">
                      <children>
-                        <TextArea layoutX="11.0" layoutY="11.0" prefHeight="94.0" prefWidth="208.0" />
+                        <TextArea layoutX="11.0" layoutY="11.0" prefHeight="94.0" prefWidth="208.0" style="-fx-background-color: #fafafa; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" />
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
