--- a/src/main/resources/view/MarksMonitorCompetition.fxml
+++ b/src/main/resources/view/MarksMonitorCompetition.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.MarksMonitorCompetitionController">
+<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.MarksMonitorCompetitionController">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -143,6 +143,11 @@
                   </Pane>
                </children>
             </GridPane>
+            <Button fx:id="addGroup" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" graphicTextGap="1.0" minHeight="32.0" minWidth="100.0" mnemonicParsing="false" onAction="#AddingGroup" prefHeight="32.0" prefWidth="298.0" style="-fx-background-color: #00C781; -fx-background-radius: 15px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Добавить (удалить) в заезд группы" textAlignment="CENTER" textFill="WHITE" textOverrun="LEADING_ELLIPSIS" GridPane.columnIndex="1">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
          </children>
       </GridPane>
    </children>
