--- a/src/main/resources/view/StartPage.fxml
+++ b/src/main/resources/view/StartPage.fxml
@@ -71,7 +71,7 @@
                </font>
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <Image url="@images/icons/home (2).png" />
+                     <Image url="@images/icons/home2.png" />
                   </ImageView>
                </graphic>
                <toggleGroup>
