--- a/src/main/resources/view/MarksGroupPopup.fxml
+++ b/src/main/resources/view/MarksGroupPopup.fxml
@@ -15,12 +15,12 @@
             <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <TextField fx:id="time" layoutX="180.0" layoutY="444.0" prefHeight="31.0" prefWidth="185.0" />
-      <Button layoutX="30.0" layoutY="536.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
+      <TextField fx:id="timeTextField" layoutX="180.0" layoutY="444.0" prefHeight="31.0" prefWidth="185.0" />
+      <Button layoutX="30.0" layoutY="536.0" mnemonicParsing="false" onAction="#saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button layoutX="195.0" layoutY="536.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <Button layoutX="195.0" layoutY="536.0" mnemonicParsing="false" onAction="#cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
       <Label layoutX="31.0" layoutY="447.0" prefHeight="25.0" prefWidth="131.0" text="Стартовое время">
          <font>
             <Font size="16.0" />
@@ -31,19 +31,19 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="circle" layoutX="180.0" layoutY="393.0" prefHeight="31.0" prefWidth="185.0" />
-      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#AddToTable" prefHeight="37.0" prefWidth="174.0" stylesheets="@css/AgreeButton.css" text="Сохранить данные">
+      <TextField fx:id="lapTextField" layoutX="180.0" layoutY="393.0" prefHeight="31.0" prefWidth="185.0" />
+      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#updateTable" prefHeight="37.0" prefWidth="174.0" stylesheets="@css/AgreeButton.css" text="Сохранить данные">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <TableView layoutX="24.0" layoutY="81.0" prefHeight="290.0" prefWidth="710.0" stylesheets="@css/table.css">
+      <TableView fx:id="runTable" layoutX="24.0" layoutY="81.0" prefHeight="290.0" prefWidth="710.0" stylesheets="@css/table.css">
         <columns>
-          <TableColumn prefWidth="48.0" text="Выбор" />
-          <TableColumn minWidth="0.0" prefWidth="21.0" text="№" />
-            <TableColumn prefWidth="270.0" text="Группа" />
-            <TableColumn prefWidth="222.0" text="Стартовое время" />
-            <TableColumn prefWidth="148.0" text="Количество кругов" />
+          <TableColumn fx:id="selectionCheckboxColumn" prefWidth="48.0" text="Выбор" />
+          <TableColumn fx:id="numberColumn" minWidth="0.0" prefWidth="21.0" text="№" />
+            <TableColumn fx:id="groupColumn" prefWidth="270.0" text="Группа" />
+            <TableColumn fx:id="startTimeColumn" prefWidth="222.0" text="Стартовое время" />
+            <TableColumn fx:id="lapColumn" prefWidth="148.0" text="Количество кругов" />
         </columns>
       </TableView>
    </children>
