--- a/src/main/resources/view/MarksGroupPopup.fxml
+++ b/src/main/resources/view/MarksGroupPopup.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="604.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.MarksGroupPopupController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="30.0" layoutY="8.0" prefHeight="66.0" prefWidth="423.0" text="Добавление групп в заезд" textFill="#305ec1">
+      <Label contentDisplay="CENTER" layoutX="30.0" layoutY="8.0" prefHeight="66.0" prefWidth="423.0" text="Добавление стартов в заезд" textFill="#305ec1">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
