--- a/src/main/resources/view/MarksGroupPopup.fxml
+++ b/src/main/resources/view/MarksGroupPopup.fxml
@@ -17,11 +17,21 @@
          </font>
       </Label>
       <TextField fx:id="timeTextField" layoutX="180.0" layoutY="444.0" prefHeight="31.0" prefWidth="185.0" />
-      <Button layoutX="30.0" layoutY="536.0" mnemonicParsing="false" onAction="#saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
+      <Button layoutX="30.0" layoutY="536.0" mnemonicParsing="false" onAction="#saving" prefHeight="37.0" stylesheets="@css/Buttons.css" text="Сохранить">
          <font>
             <Font size="14.0" />
-         </font></Button>
-      <Button layoutX="195.0" layoutY="536.0" mnemonicParsing="false" onAction="#cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+         </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn-common" />
+            <String fx:value="btn-success" />
+         </styleClass></Button>
+      <Button layoutX="156.0" layoutY="536.0" mnemonicParsing="false" onAction="#cancel" stylesheets="@css/Buttons.css" text="Отменить">
+         <styleClass>
+            <String fx:value="btn-common" />
+            <String fx:value="btn" />
+            <String fx:value="btn-danger" />
+         </styleClass></Button>
       <Label layoutX="31.0" layoutY="447.0" prefHeight="25.0" prefWidth="131.0" text="Стартовое время">
          <font>
             <Font size="16.0" />
@@ -33,7 +43,7 @@
          </font>
       </Label>
       <TextField fx:id="lapTextField" layoutX="180.0" layoutY="393.0" prefHeight="31.0" prefWidth="185.0" />
-      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#updateTable" prefHeight="37.0" prefWidth="174.0" stylesheets="@css/Buttons.css" text="Сохранить данные">
+      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#updateTable" stylesheets="@css/Buttons.css" text="Применить">
          <font>
             <Font size="14.0" />
          </font>
@@ -41,6 +51,7 @@
             <String fx:value="btn" />
             <String fx:value="btn-common" />
             <String fx:value="btn-success" />
+            <String fx:value="btn-hover-effect" />
          </styleClass>
       </Button>
       <TableView fx:id="runTable" layoutX="24.0" layoutY="81.0" prefHeight="290.0" prefWidth="710.0" stylesheets="@css/table.css">
